--- a/src/main.scss
+++ b/src/main.scss
@@ -1,1 +1,4 @@
-@import '../node_modules/react-select/scss/default.scss'
+@import '../node_modules/react-select/scss/default.scss';
+
+
+@import './components/Image.scss';
