--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 @import '../node_modules/react-select/scss/default.scss';
 
 
