Make Image.scss a SASS partial

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,4 +2,4 @@
 @import '../node_modules/react-select/scss/default.scss';
 
 
-@import './components/Image.scss';
+@import './components/_image.scss';
