--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 @import '../node_modules/react-select/scss/default.scss';
 
-
+@import './components/_spot.scss';
 @import './components/_image.scss';
