--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,13 @@
+// # Imports from libraries
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 @import '../node_modules/react-select/scss/default.scss';
+@import '../node_modules/purecss-sass/vendor/assets/stylesheets/purecss'; // TODO: after dev include only modules which are used
 
+// # General styles
+@import './styles/_variables.scss'; // make sure this is first of your own style files!
+@import './styles/_globals.scss';
+
+// # Component specific styles
 @import './components/_spot.scss';
 @import './components/_image.scss';
+@import './components/_person.scss';
