Add basic icon set from icomoon

--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,7 @@
 
 // # General styles
 @import './styles/_variables.scss'; // make sure this is first of your own style files!
+@import './styles/_icons.scss';
 @import './styles/_globals.scss';
 
 // # Component specific styles
