--- a/src/main.scss
+++ b/src/main.scss
@@ -13,3 +13,4 @@
 @import './components/_spot.scss';
 @import './components/_image.scss';
 @import './components/_person.scss';
+@import './components/_upload.scss';
