Add basic styles for the dropzone component

--- a/src/main.scss
+++ b/src/main.scss
@@ -14,3 +14,6 @@
 @import './components/_image.scss';
 @import './components/_person.scss';
 @import './components/_upload.scss';
+
+// # Container specific styles
+@import './containers/_uploadView.scss';
