--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,9 @@
+$white: #FFF;
 
-$bg-color--light: #CCC;
+$bg-color--light: #E9EAED; // FB background...
 $bg-color--dark: #E0E0E0;
 
-$color--ready: #13d11d;
+$border-color--light: #DDDDDD;
+
+$color--ready: #13d11d;  // http://www.0to255.com/12c11b
 $color--error: #f01f10;
