--- a/src/main.scss
+++ b/src/main.scss
@@ -16,4 +16,5 @@
 @import './components/_upload.scss';
 
 // # Container specific styles
+@import './containers/_header.scss';
 @import './containers/_uploadView.scss';
