--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -11,11 +11,17 @@ body {
 
 
 // purecss extends
-button {
+button, .btn {
   @extend .pure-button;
 }
 
-button.btn-primary { @extend .pure-button-primary; }
+.btn-primary { @extend .pure-button-primary; }
+.btn-secondary {
+  color: $white;
+  border-radius: 4px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  background: rgb(66, 184, 221);
+}
 form { @extend .pure-form; }
 
 
