Update Image edit form look

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,9 @@
 $white: #FFF;
 
-$bg-color--light: #E9EAED; // FB background...
+$bg-color--light: #F1F3F2;
 $bg-color--dark: #E0E0E0;
 
+$text-color--dark: #9C9C9C;
 $border-color--light: #DDDDDD;
 
 $color--ready: #13d11d;  // http://www.0to255.com/12c11b
