--- a/src/components/_image.scss
+++ b/src/components/_image.scss
@@ -10,6 +10,33 @@
   }
 }
 
+.image__title__trickname {
+  font-weight: normal;
+  font-size: 0.8em;
+  color: $text-color--dark;
+}
+
 .image__wrapper--editmode {
   .card__cover { height: 400px; }
 }
+
+
+.select-items { }
+.select__group {
+  margin-bottom: 0.5em;
+
+  // these try to mimick how purecss aligned form works, so
+  // they would look the same when put side by side
+  label {
+    display: inline-block;
+    width: 10em;
+    text-align: right;
+    vertical-align: middle;
+    margin: -26px 1em 0 0;
+  }
+  .select__wrapper {
+    display: inline-block;
+    width: 250px;
+  }
+}
+
