Move card related styles to dedicated scss file

--- a/src/main.scss
+++ b/src/main.scss
@@ -8,6 +8,7 @@
 @import './styles/_variables.scss'; // make sure this is first of your own style files!
 @import './styles/_icons.scss';
 @import './styles/_globals.scss';
+@import './styles/_card.scss';
 
 // # Component specific styles
 @import './components/_spot.scss';
