--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -3,6 +3,10 @@
   margin-bottom: 10px;
   overflow: hidden;
   border: 1px solid $border-color--light;
+
+  transition: box-shadow 0.3s;
+  box-shadow: 0 4px 4px -2px rgba(0,0,0,0.4);
+  &:hover { box-shadow: 0 4px 4px -2px rgba(0,0,0,0.8) }
 }
 
 .card__content {
