Add simple paging to ImageEditView

--- a/src/main.scss
+++ b/src/main.scss
@@ -19,3 +19,4 @@
 // # Container specific styles
 @import './containers/_header.scss';
 @import './containers/_uploadView.scss';
+@import './containers/_imageEditView.scss';
