Fetch Google Fonts via HTTPS

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,5 @@
 // # Imports from libraries
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 @import '../node_modules/react-select/scss/default.scss';
 @import '../node_modules/purecss-sass/vendor/assets/stylesheets/purecss'; // TODO: after dev include only modules which are used
 
