--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,21 @@
+@import '_colors.scss';
+
 $white: #FFF;
+
+// moar colors - copied from Sorsa website from ~ 2007
+$green: #179A5C;
+$green--light: #43B769;
+$orange: #FD9C4B;
+$yellow: #FECA30;
+$purple: #9061C2;
+
+
+// link color vars to "purposes" (person, spot, organization, image)
+$purpose: $color-secondary-1-3; // used as a default
+$purpose--person: $color-primary-4;
+$purpose--spot: $color-secondary-1-0;
+$purpose--image: $purple;
+
 
 $bg-color--light: #F1F3F2;
 $bg-color--dark: #E0E0E0;
