Add the new "card purpose" thingies
...which got some inspiration from the Futurice IoT-kit (http://iotservicekit.com/)

--- a/src/components/_image.scss
+++ b/src/components/_image.scss
@@ -4,6 +4,9 @@
 }
 
 .image__wrapper {
+  .card__purpose {
+    background-color: $purpose--image;
+  }
   .card__cover {
     transition: height 1s;
     background-repeat: no-repeat;
