--- a/src/components/_person.scss
+++ b/src/components/_person.scss
@@ -1,3 +1,8 @@
+.person__wrapper {
+  .card__purpose {
+    background-color: $purpose--person;
+  }
+}
 .person__infos {
   & > span { margin-right: 10px; }
 
