Add simple (and quite ugly) TabNavigation component

--- a/src/main.scss
+++ b/src/main.scss
@@ -20,3 +20,4 @@
 @import './containers/_header.scss';
 @import './containers/_uploadView.scss';
 @import './containers/_imageEditView.scss';
+@import './containers/_tabNavigation.scss';
