Hide Create-button on <List> if createMode===true

--- a/src/main.scss
+++ b/src/main.scss
@@ -15,6 +15,7 @@
 @import './components/_image.scss';
 @import './components/_person.scss';
 @import './components/_upload.scss';
+@import './components/_list.scss';
 
 // # Container specific styles
 @import './containers/_header.scss';
