Typofix: add missing scss import

--- a/src/main.scss
+++ b/src/main.scss
@@ -22,3 +22,4 @@
 @import './containers/_uploadView.scss';
 @import './containers/_imageEditView.scss';
 @import './containers/_tabNavigation.scss';
+@import './containers/_invitation.scss';
