Add simple Odometer-ish component
...has no animation, though

--- a/src/main.scss
+++ b/src/main.scss
@@ -16,6 +16,7 @@
 @import './components/_person.scss';
 @import './components/_upload.scss';
 @import './components/_list.scss';
+@import './components/_odometer.scss';
 
 // # Container specific styles
 @import './containers/_header.scss';
