--- a/src/main.scss
+++ b/src/main.scss
@@ -2,12 +2,14 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 @import '../node_modules/react-select/scss/default.scss';
 @import '../node_modules/purecss-sass/vendor/assets/stylesheets/purecss'; // TODO: after dev include only modules which are used
+@import '../node_modules/viewports/viewports';
 
 // # General styles
 @import './styles/_mixins.scss';
-@import './styles/_variables.scss'; // make sure this is first of your own style files!
+@import './styles/_variables.scss';
 @import './styles/_icons.scss';
 @import './styles/_globals.scss';
+@import './styles/_form.scss';
 @import './styles/_card.scss';
 
 // # Component specific styles
