Use Titillium Web as a basic font

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,4 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,700italic,700);
+
 body {
+  font-family: 'Titillium Web', sans-serif;
   background-color: $bg-color--light;
 }
 
