Add first version of landing page content

--- a/src/main.scss
+++ b/src/main.scss
@@ -24,4 +24,5 @@
 @import './containers/_uploadView.scss';
 @import './containers/_imageEditView.scss';
 @import './containers/_tabNavigation.scss';
+@import './containers/_landing.scss';
 @import './containers/_invitation.scss';
