--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $white: #FFF;
 // moar colors - copied from Sorsa website from ~ 2007
 $green: #179A5C;
 $green--light: #43B769;
+$green--dimmed: #5FC67A;
 $orange: #FD9C4B;
 $yellow: #FECA30;
 $purple: #9061C2;
