Rename LoginView to LoginButtons, do changes to justify the name

--- a/src/main.scss
+++ b/src/main.scss
@@ -26,3 +26,4 @@
 @import './containers/tabNavigation';
 @import './containers/landing';
 @import './containers/invitation';
+@import './containers/LoginButtons';
