Facelift to StatusCard

--- a/src/main.scss
+++ b/src/main.scss
@@ -18,6 +18,7 @@
 @import './components/upload';
 @import './components/list';
 @import './components/odometer';
+@import './components/statusCard';
 
 // # Container specific styles
 @import './containers/header';
