--- a/src/components/_odometer.scss
+++ b/src/components/_odometer.scss
@@ -5,6 +5,7 @@
   .odometer__title {
     font-size: 15px;
     margin: 0;
+    text-align: left;
   }
 
   span.whitespace {
@@ -23,5 +24,18 @@
     padding: 2px 3px;
 
     border-radius: 4px;
+  }
+
+  @include viewports (up-to small) {
+    font-size: 20px;
+
+    span.digit {
+      margin-right: 1px;
+      padding: 1px 2px;
+    }
+
+    span.whitespace {
+      padding: 0 2px;
+    }
   }
 }
