Add first version of the footer

--- a/src/main.scss
+++ b/src/main.scss
@@ -19,6 +19,7 @@
 @import './components/list';
 @import './components/odometer';
 @import './components/statusCard';
+@import './components/footer';
 
 // # Container specific styles
 @import './containers/header';
