--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,8 @@ $green--dimmed: #5FC67A;
 $orange: #FD9C4B;
 $yellow: #FECA30;
 $purple: #9061C2;
+$blue: #187389;
+$blue--dark: #024555;
 
 
 // link color vars to "purposes" (person, spot, organization, image)
