--- a/src/containers/_header.scss
+++ b/src/containers/_header.scss
@@ -5,14 +5,12 @@
 
 .header__title {
   @extend .pure-menu-heading;
+  @extend .app__title;
   color: $white;
   font-size: 30px;
   padding: 0 20px;
 
   user-select: none;
-
-  font-weight: 700;
-  font-style: italic;
 
   &.header__title--mini { display: none; }
 
