--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -30,3 +30,9 @@ button, .btn {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   background: rgb(66, 184, 221);
 }
+
+.app__title {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-style: italic;
+}
