Add some magic unicorn touch to Footer

--- a/src/components/_footer.scss
+++ b/src/components/_footer.scss
@@ -28,6 +28,11 @@
   filter: grayscale(100%);
   float: right;
 
+  transition: filter 0.5s;
+
+  &:hover {
+    filter: grayscale(0%);
+  }
 }
 
 .footer__title {
