--- a/src/main.scss
+++ b/src/main.scss
@@ -20,6 +20,7 @@
 @import './components/odometer';
 @import './components/statusCard';
 @import './components/footer';
+@import './components/imageHilight';
 
 // # Container specific styles
 @import './containers/header';
