Hide arrows from image carousel on mobile breakpoints

--- a/src/main.scss
+++ b/src/main.scss
@@ -20,6 +20,7 @@
 @import './components/odometer';
 @import './components/statusCard';
 @import './components/footer';
+@import './components/imageReel';
 @import './components/imageHilight';
 
 // # Container specific styles
