--- a/src/containers/_loginButtons.scss
+++ b/src/containers/_loginButtons.scss
@@ -1,5 +1,9 @@
 .login-buttons__wrapper {
+  text-align: center;
+  margin-bottom: 20px;
+
   button {
+    display: inline-block;
     margin-right: 5px;
     margin-bottom: 5px;
     min-width: 240px;
