Separate Badge to individual component

--- a/src/main.scss
+++ b/src/main.scss
@@ -22,6 +22,7 @@
 @import './components/footer';
 @import './components/imageReel';
 @import './components/imageHilight';
+@import './components/badge';
 
 // # Container specific styles
 @import './containers/header';
