--- a/src/containers/_invitation.scss
+++ b/src/containers/_invitation.scss
@@ -7,8 +7,11 @@
     font-size: 25px;
     display: inline-block;
     margin-right: 10px;
+    margin-bottom: 0 !important;
   }
-  input {
+
+  @include viewports (up-to small) {
+    input, button { font-size: 20px; }
   }
 }
 
