Add Spinner-component based on @arthurcamara1's CSS
from here http://codepen.io/arthurcamara1/pen/LpNwyq

--- a/src/main.scss
+++ b/src/main.scss
@@ -23,6 +23,7 @@
 @import './components/imageReel';
 @import './components/imageHilight';
 @import './components/badge';
+@import './components/spinner';
 
 // # Container specific styles
 @import './containers/header';
