Set the image hilight height to 80vh
this is better than those media queries; now the hilight image is almost the size of the user's
viewport height

--- a/src/components/_imageHilight.scss
+++ b/src/components/_imageHilight.scss
@@ -1,14 +1,7 @@
 .image-hilight__wrapper {
   width: 100%;
-  height: 550px;
+  height: 80vh;
   position: relative;
-
-  @include viewports(up-to small) {
-    height: 450px;
-  }
-  @include viewports(tiny) {
-    height: 300px;
-  }
 }
 
 .hilight__meta {
