Cosmetic bugfix: set .btn element text color to $white
It was overwritten on some cases where a.btn is used

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -39,6 +39,11 @@ a:hover {
 button, .btn {
   @extend .pure-button;
 }
+.btn,
+.btn:visited,
+.btn:hover {
+  color: $white;
+}
 
 .btn-primary {
   @extend .pure-button-primary;
