Add first version of SpotClusterMap-container

--- a/src/main.scss
+++ b/src/main.scss
@@ -33,3 +33,4 @@
 @import './containers/landing';
 @import './containers/invitation';
 @import './containers/loginButtons';
+@import './containers/spotClusterMap';
