Stylize the SpotClusterMap & the button for showing it

--- a/src/containers/_spotClusterMap.scss
+++ b/src/containers/_spotClusterMap.scss
@@ -1,7 +1,11 @@
-.spot-cluster__map__wrapper {
-  height: 300px;
+.spot-cluster__wrapper {
+  margin: 20px 0;
 }
 
 .spot-cluster__container {
-  height: 100%;
+  height: 80vh;
+}
+
+.spot-cluster__map__wrapper {
+  height: 80vh;
 }
