--- a/src/containers/_landing.scss
+++ b/src/containers/_landing.scss
@@ -1,5 +1,27 @@
 .landing-view__wrapper {
+  .spot-map__placeholder {
+    box-sizing: border-box;
 
+    background-color: $purpose--spot;
+    color: $white;
+
+    margin: 30px auto;
+    width: 85%;
+    max-width: 400px;
+
+    padding: 20px 0;
+    border-radius: 2px;
+
+    cursor: pointer;
+    text-align: center;
+
+    i {
+      font-size: 50px;
+    }
+
+    transition: 0.5s background-color;
+    &:hover { background-color: lighten($purpose--spot, 5%); }
+  }
 }
 
 .kpi__wrapper {
