Refactor: separate PageControls into own container

--- a/src/main.scss
+++ b/src/main.scss
@@ -29,6 +29,7 @@
 @import './containers/header';
 @import './containers/uploadView';
 @import './containers/imageEditView';
+@import './containers/pageControls';
 @import './containers/tabNavigation';
 @import './containers/landing';
 @import './containers/invitation';
