Move the color used in secondary buttons to variables

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $yellow: #FECA30;
 $purple: #9061C2;
 $blue: #187389;
 $blue--dark: #024555;
+$blue--light: rgb(66, 184, 221);
 
 
 // link color vars to "purposes" (person, spot, organization, image)
