Introduce ToggleButton component

--- a/src/main.scss
+++ b/src/main.scss
@@ -24,6 +24,7 @@
 @import './components/imageHilight';
 @import './components/badge';
 @import './components/spinner';
+@import './components/toggleButton';
 
 // # Container specific styles
 @import './containers/header';
