Add basic look&feel to ImageFilters container

--- a/src/main.scss
+++ b/src/main.scss
@@ -36,3 +36,4 @@
 @import './containers/invitation';
 @import './containers/loginButtons';
 @import './containers/spotClusterMap';
+@import './containers/imageFilters';
