Make the bg--dark 5% lighter

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,7 +22,7 @@ $purpose--image: $purple;
 
 
 $bg-color--light: #e8e8e8;// http://www.0to255.com/E0E0E0
-$bg-color--dark: #bebebe;
+$bg-color--dark: #CBCBCB;
 
 $text-color--dark: #9C9C9C;
 $border-color--light: #bebebe;
